# garbage-codes-season-01

./: .gitignore  README.md  pyproject.toml
DjangoApps/ToDoLive/: asgi.py  settings.py  urls.py
DjangoApps/jokesApi/: app_requirements.txt  apps.py  models.py  serializers.py  urls.py  views.py
DjangoApps/todos/: admin.py  models.py  serializers.py  views.py
DjangoApps/weatherReport/: apps.py  urls.py  views.py
DjangoToDo/: makefile  todo.md
DjangoToDo/DjangoToDo/: settings.py  urls.py
DjangoToDo/todo/: admin.py  forms.py  models.py  urls.py  views.py
DjangoToDo/users/: forms.py  urls.py  views.py
MasteringDjango/: Notes.md  manage.py
MasteringDjango/MasteringDjango/: asgi.py  settings.py  urls.py  wsgi.py
MasteringDjango/firstApp/: admin.py  models.py
Oop Learning/: _classes.py  create_classes.py  encapsulation.py  inheritance.py  properties.py
Oop Learning & Practice/: _classes.py  encapsulation.py  oop.py
Oop Learning & Practice/oops thinking/: calculator.py  main.py
ToDoLive/: manage.py
ToDoLive/ToDoLive/: settings.py  urls.py  wsgi.py
ToDoLive/todos/: urls.py  views.py
UserManagementProj/: manage.py
UserManagementProj/UserManagementProj/: asgi.py  settings.py  urls.py  wsgi.py
UserManagementProj/user/: forms.py  urls.py  views.py
pynattive_site_exercises/: calculate_income_tax.py  char_index_num_present.py  count_substrings_in_string.py  exponent.py  extract_digits.py  first_last_num_same.py  is_paliandrome.py  multiplication_sum.py  print_pattern.py  pyramid_star_print_downward.py  remove_chars.py
(+155 files in other folders)
