[tool.poetry]
name = "garbage-codes-season-01"
version = "0.1.0"
description = "All garbage code here"
authors = ["ashwinPy <ashwinam31@gmail.com>"]
readme = "README.md"
packages = [{include = "garbage_codes_season_01"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
social-auth-app-django = "^5.4.0"
python-dateutil = "^2.8.2"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
